Avoid deprecated Boolean() constructor